--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,20 @@ dependencies:
   timer_builder: ^2.0.0
   intl: ^0.18.0
   http: ^0.13.5
-  flutter_barcode_scanner: ^2.0.0
+  sqflite: ^2.2.4+1
+  path: ^1.8.2
+  camera: ^0.10.3
+  convert: ^3.1.1
+  kiosk_mode: ^0.3.0
+  wakelock: ^0.6.2
+  toast: ^0.3.0
+  flutter_launcher_icons: ^0.12.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/img/logo.png"  
+  
 
 dev_dependencies:
   flutter_test:
