--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   timer_builder: ^2.0.0
   intl: ^0.18.0
-  http: ^0.13.5
+  http: ^1.0.0
   sqflite: ^2.2.4+1
   path: ^1.8.2
   camera: ^0.10.3
@@ -45,8 +45,8 @@ dependencies:
   kiosk_mode: ^0.3.0
   wakelock: ^0.6.2
   toast: ^0.3.0
-  flutter_launcher_icons: ^0.12.0
-  connectivity_plus: ^3.0.3
+  flutter_launcher_icons: ^0.13.1
+  connectivity_plus: ^4.0.1
   rxdart: ^0.27.7
   
 
@@ -83,6 +83,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
+  assets:
+      - assets/ca/cert.pem
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
